<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView01"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"
    android:gravity="center"
	> 
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
		android:gravity="center" 
	    >
		<TextView 
			style="@style/HeaderFont"
			android:text="@string/createaccount"
			android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		/>
    	<ImageView
    		android:id="@+id/userpic"
    		android:layout_width="150dp"
    		android:layout_height="wrap_content"
    		android:src="@drawable/start"
    		android:scaleType="fitXY"
    		android:padding="3dp"
    		/>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/username"
		    android:textStyle="italic"
		    />
		<EditText
	       android:id="@+id/studentName"
	       android:text=""
		   android:layout_width="fill_parent" 
 		   android:layout_height="wrap_content"
 		   android:imeOptions="actionNext"
 		   android:singleLine="true" 
		   />
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/wiseuser"
		    android:textStyle="italic"
		    />
		<EditText
			android:id="@+id/wiseUserName"
			android:text=""
		    android:layout_width="fill_parent" 
 		    android:layout_height="wrap_content"
 		    android:singleLine="true"
 		    android:imeOptions="actionNext"
		   />    
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/wisepass"
		    android:textStyle="italic"
		    />
		 <EditText
		   	android:id="@+id/wisePasswd"
		   	android:text=""
		   	android:password="true"
			android:layout_width="fill_parent" 
	 		android:layout_height="wrap_content"
	 		android:singleLine="true"
	 		android:imeOptions="actionGo" 
		   />
		 <Button
		 	android:id="@+id/startButton"
		 	android:text="@string/b_createaccount"
		 	android:layout_height="wrap_content"
		 	android:layout_width="wrap_content"
		 	android:layout_marginTop="5dp"
		 	android:layout_marginBottom="5dp"
		 	/>
		 <TextView  
		 	style="@style/FailMessage"
		 	android:id="@+id/loginResult"
		    android:text=""
		    />
		   
	</LinearLayout>
</ScrollView>
