<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
 	<ScrollView
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:fillViewport="true"
		android:layout_below="@+id/top"
	 >
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:orientation="vertical" 
			android:gravity="center_horizontal"
		>
		<TextView
			android:text="Nothing noted yet ..."
			android:layout_width="fill_parent"
			android:layout_height="100dp"
			android:gravity="center"
			android:textStyle="italic"
			android:textSize="20dp"
			android:visibility="gone"
			/>
		<Gallery
			android:id="@+id/gallery"
			android:visibility="visible"
			android:layout_width="fill_parent"
			android:layout_height="100dp"
			android:gravity="center"
			android:spacing="5dp"
			android:layout_marginTop="8dp"
		/>
			<!-- <LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:gravity = "center"
				android:id="@+id/linearLayout1">
				<LinearLayout 
					android:layout_height="wrap_content"
					android:layout_width="80dp"
					android:orientation="vertical"
					android:gravity = "center"
					android:id="@+id/linearLayout1">
					<ImageView
						android:id="@+id/b_camera" 
						android:src="@drawable/camerabutton"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</ImageView>
					<TextView
						android:text="Take a picture"
						android:gravity="center"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</TextView>
				</LinearLayout>
				<LinearLayout 
					android:layout_height="wrap_content"
					android:layout_width="80dp"
					android:orientation="vertical"
					android:gravity = "center"
					android:id="@+id/linearLayout1">
					<ImageView 
						android:id="@+id/b_record" 
						android:src="@drawable/recordbutton"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</ImageView>
					<TextView
						android:gravity="center"
						android:text="Audio note"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</TextView>
				</LinearLayout>
				<LinearLayout 
					android:layout_height="wrap_content"
					android:layout_width="80dp"
					android:orientation="vertical"
					android:gravity = "center"
					android:id="@+id/linearLayout1">
					<ImageView 
						android:id="@+id/b_measure" 
						android:src="@drawable/newmeasurebutton"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</ImageView>
					<TextView
						android:gravity="center"
						android:text="Measure something"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content">
					</TextView>
				</LinearLayout>
			</LinearLayout> -->
			<TableLayout 
				android:layout_margin="4dp"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:gravity="center" 
				android:id="@+id/tableLayout1">
				<TableRow 
					android:id="@+id/tableRow1" 
					android:layout_width="fill_parent" 
					android:gravity="center"
					android:layout_height="wrap_content">
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_zerozero" 
							android:src="@drawable/plantbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/zerozero"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_zeroone" 
							android:src="@drawable/mammalbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/zeroone"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_zerotwo" 
							android:src="@drawable/birdbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/zerotwo"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_zerothree" 
							android:src="@drawable/fishbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/zerothree"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
				
				</TableRow>
				<TableRow 
					android:id="@+id/tableRow2" 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent"
					android:gravity="center">
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_onezero" 
							android:src="@drawable/reptilebutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/onezero"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_oneone" 
							android:src="@drawable/amphibianbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/oneone"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_onetwo" 
							android:src="@drawable/invertibratebutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/onetwo"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_onethree" 
							android:src="@drawable/fungibutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/onethree"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
			</TableRow>
			<TableRow 
					android:id="@+id/tableRow1" 
					android:layout_width="wrap_content" 
					android:gravity="center"
					android:layout_height="wrap_content">
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_twozero" 
							android:src="@drawable/waterbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/twozero"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_twoone" 
							android:src="@drawable/soilbutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/twoone"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_twotwo" 
							android:src="@drawable/addtypebutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/twotwo"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout>
					<!-- <LinearLayout 
						android:layout_height="wrap_content"
						android:layout_width="65dp"
						android:orientation="vertical"
						android:gravity = "center"
						android:padding="0dp"
						android:id="@+id/linearLayout1">
						<ImageView 
							android:id="@+id/b_twothree" 
							android:src="@drawable/newmeasurebutton"
							android:focusable="true"
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
						</ImageView>
						<TextView
							android:gravity="top|center"
							android:text="@string/twothree"
							android:layout_width="wrap_content" 
							android:layout_height="40dp">
						</TextView>
					</LinearLayout> -->
				</TableRow>
			</TableLayout>
			
			

		
        </LinearLayout>
     </ScrollView>
</LinearLayout>